# concept-file

./: README.ja.md  README.md  SPEC.ja.md  SPEC.md  pyproject.toml
.claude/: CLAUDE.ja.md  CLAUDE.md
cli/: concept-dist  concept-embed  concept-grep  concept-plot  concept-search  concept-show  concept-sim
examples/java-project/concepts/: AuthService.concept  Order.concept  PaymentService.concept  Product.concept  ProductSearchService.concept  User.concept
examples/java-project/src/: AuthService.java  AuthService.java.concept  Order.java  Order.java.concept  PaymentService.java  PaymentService.java.concept  Product.java  Product.java.concept  ProductSearchService.java  User.java  User.java.concept
examples/tree-sitter-test/bash/: deploy.sh  deploy.sh.concept  hello.sh  hello.sh.concept
examples/tree-sitter-test/c/: hello.c  hello.c.concept  linked_list.c  linked_list.c.concept
examples/tree-sitter-test/cpp/: matrix.cpp  matrix.cpp.concept  point.cpp  point.cpp.concept
examples/tree-sitter-test/csharp/: Greeter.cs  Greeter.cs.concept  TodoService.cs  TodoService.cs.concept
examples/tree-sitter-test/css/: button.css  button.css.concept  theme.css  theme.css.concept
examples/tree-sitter-test/elixir/: counter.ex  counter.ex.concept  greeter.ex  greeter.ex.concept
examples/tree-sitter-test/go/: hello.go  hello.go.concept  server.go  server.go.concept
examples/tree-sitter-test/haskell/: Hello.hs  Hello.hs.concept  Stack.hs  Stack.hs.concept
examples/tree-sitter-test/html/: dashboard.html  dashboard.html.concept  hello.html  hello.html.concept
examples/tree-sitter-test/java/: Greeter.java  Greeter.java.concept  OnlineStore.java  OnlineStore.java.concept
examples/tree-sitter-test/javascript/: hello.js  hello.js.concept  taskRunner.js  taskRunner.js.concept
examples/tree-sitter-test/json/: package.json  package.json.concept  tsconfig.json  tsconfig.json.concept
examples/tree-sitter-test/kotlin/: Greeter.kt  Greeter.kt.concept  Repository.kt  Repository.kt.concept
examples/tree-sitter-test/lua/: game.lua  game.lua.concept  greeter.lua  greeter.lua.concept
examples/tree-sitter-test/objc/: Animal.m  Animal.m.concept  Hello.m  Hello.m.concept
examples/wikipedia/: fetch-ja.sh  fetch.sh
python/concept_file/: __init__.py  reader.py  search.py  summarizer.py
tests/: test_concept_embed.py  test_summarizer_fallback.py
(+742 files in other folders)
